--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/opik_optimizer/reference.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/opik_optimizer/reference.mdx
@@ -8,7 +8,7 @@ The Opik Agent Optimizer SDK provides a comprehensive set of tools for optimizin
 ## Key Features
 
 - **Standardized API**: All optimizers follow the same interface for `optimize_prompt()` and `optimize_mcp()` methods
-- **Multiple Algorithms**: Support for various optimization strategies including evolutionary, few-shot, meta-prompt, MIPRO, and GEPA
+- **Multiple Algorithms**: Support for various optimization strategies including evolutionary, few-shot, meta-prompt and GEPA
 - **MCP Support**: Built-in support for Model Context Protocol tool calling
 - **Consistent Results**: All optimizers return standardized `OptimizationResult` objects
 - **Counter Tracking**: Built-in LLM and tool call counters for monitoring usage
@@ -19,12 +19,12 @@ The Opik Agent Optimizer SDK provides a comprehensive set of tools for optimizin
 
 The SDK provides several optimizer classes that all inherit from `BaseOptimizer` and implement the same standardized interface:
 
-- **ParameterOptimizer**: Optimizes LLM call parameters (temperature, top_p, etc.) using Bayesian optimization
-- **FewShotBayesianOptimizer**: Uses few-shot learning with Bayesian optimization
-- **MetaPromptOptimizer**: Employs meta-prompting techniques for optimization
 - **EvolutionaryOptimizer**: Uses genetic algorithms for prompt evolution
+- **FewShotBayesianOptimizer**: Uses few-shot learning with Bayesian optimization
 - **GepaOptimizer**: Leverages GEPA (Genetic-Pareto) optimization approach
 - **HierarchicalReflectiveOptimizer**: Uses hierarchical root cause analysis for targeted prompt refinement
+- **MetaPromptOptimizer**: Employs meta-prompting techniques for optimization
+- **ParameterOptimizer**: Optimizes LLM call parameters (temperature, top_p, etc.) using Bayesian optimization
 
 ## Standardized Method Signatures
 
@@ -862,7 +862,7 @@ ChatPrompt(
     name: str = 'chat-prompt',
     system: str | None = None,
     user: str | None = None,
-    messages: list[dict[str, str]] | None = None,
+    messages: list[dict[str, typing.Any]] | None = None,
     tools: list[dict[str, typing.Any]] | None = None,
     function_map: dict[str, collections.abc.Callable] | None = None,
     model: str = 'gpt-4o-mini',
@@ -877,7 +877,7 @@ ChatPrompt(
 <ParamField path="name" type="str" optional={true} default="chat-prompt" />
 <ParamField path="system" type="str | None" optional={true}>the system prompt</ParamField>
 <ParamField path="user" type="str | None" optional={true} />
-<ParamField path="messages" type="list[dict[str, str]] | None" optional={true}>a list of dictionaries with role/content, with a content containing {input-dataset-field}</ParamField>
+<ParamField path="messages" type="list[dict[str, typing.Any]] | None" optional={true}>a list of dictionaries with role/content, with a content containing {input-dataset-field}</ParamField>
 <ParamField path="tools" type="list[dict[str, typing.Any]] | None" optional={true} />
 <ParamField path="function_map" type="dict[str, collections.abc.Callable] | None" optional={true} />
 <ParamField path="model" type="str" optional={true} default="gpt-4o-mini" />
@@ -894,14 +894,14 @@ copy()
 #### get_messages
 ```python
 get_messages(
-    dataset_item: dict[str, str] | None = None
+    dataset_item: dict[str, typing.Any] | None = None
 )
 ```
 
 
 **Parameters:**
 
-<ParamField path="dataset_item" type="dict[str, str] | None" optional={true} />
+<ParamField path="dataset_item" type="dict[str, typing.Any] | None" optional={true} />
 
 #### set_messages
 ```python
@@ -921,6 +921,18 @@ to_dict()
 ```
 
 
+#### validate_messages
+```python
+validate_messages(
+    messages: list
+)
+```
+
+
+**Parameters:**
+
+<ParamField path="messages" type="list" />
+
 #### with_messages
 ```python
 with_messages(
@@ -938,12 +950,12 @@ with_messages(
 ```python
 OptimizationResult(
     optimizer: <class 'str'> = 'Optimizer',
-    prompt: list[dict[str, str]],
+    prompt: list[dict[str, Any]],
     score: <class 'float'>,
     metric_name: <class 'str'>,
     optimization_id: str | None = None,
     dataset_id: str | None = None,
-    initial_prompt: list[dict[str, str]] | None = None,
+    initial_prompt: list[dict[str, Any]] | None = None,
     initial_score: float | None = None,
     details: dict[str, Any] = PydanticUndefined,
     history: list[dict[str, Any]] = [],
@@ -959,12 +971,12 @@ OptimizationResult(
 **Parameters:**
 
 <ParamField path="optimizer" type="<class 'str'>" optional={true} default="Optimizer" />
-<ParamField path="prompt" type="list[dict[str, str]]" default="PydanticUndefined" />
+<ParamField path="prompt" type="list[dict[str, Any]]" default="PydanticUndefined" />
 <ParamField path="score" type="<class 'float'>" default="PydanticUndefined" />
 <ParamField path="metric_name" type="<class 'str'>" default="PydanticUndefined" />
 <ParamField path="optimization_id" type="str | None" optional={true} />
 <ParamField path="dataset_id" type="str | None" optional={true} />
-<ParamField path="initial_prompt" type="list[dict[str, str]] | None" optional={true} />
+<ParamField path="initial_prompt" type="list[dict[str, Any]] | None" optional={true} />
 <ParamField path="initial_score" type="float | None" optional={true} />
 <ParamField path="details" type="dict[str, Any]" optional={true} default="PydanticUndefined" />
 <ParamField path="history" type="list[dict[str, Any]]" optional={true} default="[]" />
